--- a/index.html
+++ b/index.html
@@ -4,52 +4,56 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <body class="page">
+    <div class="header">
+      <img src="./eisenhower-matrix.jpg" class="header__img">
+      <a href="https://goal-life.com/page/method/matrix-eisenhower" class="header__link">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+    <div class="main">
+      <div class="form">
+        <label for="new-task" class="form__title form__title_new-task">Add Item</label>
+        <div class="task">
+          <input id="new-task" class="task__input task__input_new-task" type="text">
+          <button class="button button_add">Add</button>
         </div>
-      </p>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
-          </button>
-        </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
-          </button>
-        </li>
-      </ul>
+      </div>
+      <div class="form">
+        <h3 class="form__title">Todo</h3>
+        <ul id="incompleteTasks" class="form__list-tasks">
+          <li class="task">
+            <input type="checkbox" class="task__checkbox">
+            <label class="task__label">Pay Bills</label>
+            <input type="text" class="task__input">
+            <button class="button button_edit">Edit</button>
+            <button class="button button_delete">
+              <img src="./remove.svg" class="button__img">
+            </button>
+          </li>
+          <li class="task task_editMode">
+            <input type="checkbox" class="task__checkbox">
+            <label class="task__label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task__input">
+            <button class="button button_edit">Save</button>
+            <button class="button button_delete">
+              <img src="./remove.svg" class="button__img">
+            </button>
+          </li>
+        </ul>
+      </div>
+      <div class="form form_completed">
+        <h3 class="form__title">Completed</h3>
+        <ul id="completedTasks" class="form__list-tasks">
+          <li class="task">
+            <input type="checkbox" class="task__checkbox" checked>
+            <label class="task__label task__label">See the Doctor</label>
+            <input type="text" class="task__input">
+            <button class="button button_edit">Edit</button>
+            <button class="button button_delete">
+              <img src="./remove.svg" class="button__img">
+            </button>
+          </li>
+        </ul>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
