--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" class="header__img">
+      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix" class="header__img">
       <a href="https://goal-life.com/page/method/matrix-eisenhower" class="header__link">Want more details?</a>
     </header>
     <main class="main">
@@ -26,7 +26,7 @@
             <input type="text" class="task__input">
             <button class="button button_edit">Edit</button>
             <button class="button button_delete">
-              <img src="./remove.svg" class="button__img">
+              <img src="./remove.svg" alt="button delete task" class="button__img">
             </button>
           </li>
           <li class="task task_editMode">
@@ -35,7 +35,7 @@
             <input type="text" value="Go Shopping" class="task__input">
             <button class="button button_edit">Save</button>
             <button class="button button_delete">
-              <img src="./remove.svg" class="button__img">
+              <img src="./remove.svg" alt="button delete task" class="button__img">
             </button>
           </li>
         </ul>
@@ -49,7 +49,7 @@
             <input type="text" class="task__input">
             <button class="button button_edit">Edit</button>
             <button class="button button_delete">
-              <img src="./remove.svg" class="button__img">
+              <img src="./remove.svg" alt="button delete task" class="button__img">
             </button>
           </li>
         </ul>
